fix spacing of max and min

--- a/vynos/frame/pages/WalletPage/Receive/receive.css
+++ b/vynos/frame/pages/WalletPage/Receive/receive.css
@@ -215,6 +215,8 @@
 
 .inlineCurrency {
   margin: 0 8px;
+  width: 68px;
+  justify-content: flex-start;
 }
 
 .minIcon {
